Add bashrc setup

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,4 +1,5 @@
 - block:
+  - import_tasks: subtasks/bash.yml
   - import_tasks: subtasks/nerdfont.yml
   - import_tasks: subtasks/nvim.yml
   - import_tasks: subtasks/starship.yml
