Add tmux + config

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -6,4 +6,5 @@
   - import_tasks: subtasks/starship.yml
   - import_tasks: subtasks/terminator.yml
   - import_tasks: subtasks/thefuck.yml
+  - import_tasks: subtasks/tmux.yml
   - import_tasks: subtasks/z.yml
