Add gnome config

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,6 +1,7 @@
 - block:
   - import_tasks: subtasks/bash.yml
   - import_tasks: subtasks/fzf.yml
+  - import_tasks: subtasks/gnome.yml
   - import_tasks: subtasks/nerdfont.yml
   - import_tasks: subtasks/nvim.yml
   - import_tasks: subtasks/starship.yml
