--- a/roles/base/tasks/subtasks/thefuck.yml
+++ b/roles/base/tasks/subtasks/thefuck.yml
@@ -2,3 +2,9 @@
   ansible.builtin.pip:
     name: thefuck
     extra_args: --user
+
+- name: thefuck // Add bash config
+  ansible.builtin.copy:
+    src: bash/thefuck.bash
+    dest: "{{ ansible_env.HOME }}/.config/bash/thefuck.bash"
+
