--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -3,6 +3,7 @@
   - import_tasks: subtasks/fzf.yml
   - import_tasks: subtasks/gnome.yml
   - import_tasks: subtasks/nerdfont.yml
+  - import_tasks: subtasks/nodejs.yml
   - import_tasks: subtasks/nvim.yml
   - import_tasks: subtasks/starship.yml
   - import_tasks: subtasks/terminator.yml
