Properly setup groups and tidy up a little

--- a/local.yml
+++ b/local.yml
@@ -1,37 +1,34 @@
 - name: Pre-Run // Group Host
-  hosts: all
+  hosts: localhost
   tasks:
+    - name: Pre-Run // Setup All Group
+      add_host:
+        name: "{{ ansible_hostname }}"
+        groups: all
+
     - name: Pre-Run // Setup MRT Group
       add_host:
         name: "{{ ansible_hostname }}"
         groups: mrt
       when: "'mrt' in ansible_hostname"
-    - name: Pre-Run // Setup TEST Group
-      add_host:
-        name: "{{ ansible_hostname }}"
-        groups: test
-      when: "'test' in ansible_hostname"
 
-- hosts: sudo_hosts
+- hosts: privileged
   become: true
   pre_tasks:
     - name: Pre-Run // Update Package Cache
       apt: update_cache=yes
       changed_when: False
 
-- hosts: sudo_hosts
+- hosts: privileged
   become: true
   roles:
-    - root_base
+    - privileged
 
 - hosts: all
   roles:
-    - base
+    - user_config
 
 - hosts: mrt
   roles:
     - mrt
 
-- hosts: test
-  roles:
-    - test
