--- a/roles/user_config/tasks/subtasks/tmux.yml
+++ b/roles/user_config/tasks/subtasks/tmux.yml
@@ -21,3 +21,8 @@
 - name: tmux // Install Plugins
   ansible.builtin.shell: "bash {{ ansible_env.HOME }}/.config/tmux/plugins/tpm/bin/install_plugins"
   when: tmux_config.changed
+
+- name: tmux // Add bash config
+  ansible.builtin.copy:
+    src: bash/tmux.bash
+    dest: "{{ ansible_env.HOME }}/.config/bash/tmux.bash"
