--- a/roles/user_config/tasks/subtasks/nvim.yml
+++ b/roles/user_config/tasks/subtasks/nvim.yml
@@ -4,6 +4,7 @@
     dest: "{{ ansible_env.HOME }}/.local/bin/nvim"
     checksum: sha256:0c82e5702af7a11fbb916a11b4a82e98928abf8266c74b2030ea740340437bf9
     mode: "0755"
+  when: ansible_architecture == "x86_64"
 
 - name: Neovim // Clone Config
   ansible.builtin.git:
