--- a/roles/user_config/tasks/subtasks/tmux.yml
+++ b/roles/user_config/tasks/subtasks/tmux.yml
@@ -1,10 +1,83 @@
-- name: tmux // Download Appimage
-  ansible.builtin.get_url:
-    url: "https://github.com/nelsonenzo/tmux-appimage/releases/download/3.3a/tmux.appimage"
-    dest: "{{ ansible_env.HOME }}/.local/bin/tmux"
-    checksum: sha256:ba8f457f280caacf0e6f3b3772eb84be2b47800d0b853da680cddd09c353bcc3
-    mode: "0755"
-  when: ansible_architecture == "x86_64"
+- name: tmux // Install dependencies
+  become: true
+  tags: [never, privileged]
+  ansible.builtin.package:
+    name:
+      - autoconf
+      - automake
+      - bison
+      - xclip
+    state: present
+
+- name: tmux // Install arch dependencies
+  become: true
+  tags: [never, privileged]
+  ansible.builtin.package:
+    name:
+      - base-devel
+      - libevent
+      - ncurses
+      - pkgconf
+    state: present
+  when: ansible_distribution == "Archlinux"
+
+- name: tmux // Install debian dependencies
+  become: true
+  tags: [never, privileged]
+  ansible.builtin.package:
+    name:
+      - build-essential
+      - libevent
+      - libevent-dev
+      - ncurses
+      - ncurses-dev
+      - pkg-config
+    state: present
+  when: ansible_distribution in ["Debian", "Ubuntu"]
+
+- name: tmux // Check installed version
+  command: tmux -V
+  ignore_errors: true
+  changed_when: false
+  failed_when: false
+  register: tmux_installed_version
+
+- when: tmux_installed_version is failed or tmux_installed_version.stdout.split()[1] is version(tmux_version, "!=")
+  block:
+    - name: tmux // Clone tmux
+      ansible.builtin.git:
+        repo: "https://github.com/tmux/tmux.git"
+        dest: "/tmp/tmux-{{ tmux_version }}"
+        depth: 1
+        version: "{{tmux_version}}"
+
+    - name: tmux // Autogen
+      command: sh autogen.sh
+      args:
+        chdir: "/tmp/tmux-{{ tmux_version }}"
+        creates: "/tmp/tmux-{{ tmux_version }}/configure"
+
+    - name: tmux // Configure
+      command: ./configure --prefix={{ ansible_env.HOME }}/.local
+      args:
+        chdir: "/tmp/tmux-{{ tmux_version }}"
+        creates: "/tmp/tmux-{{ tmux_version }}/Makefile"
+
+    - name: tmux // Make
+      command: make
+      args:
+        chdir: "/tmp/tmux-{{ tmux_version }}"
+        creates: "/tmp/tmux-{{ tmux_version }}/tmux"
+
+    - name: tmux // Install
+      command: make install
+      args:
+        chdir: "/tmp/tmux-{{ tmux_version }}"
+
+    - name: tmux // Remove build directory
+      ansible.builtin.file:
+        path: "/tmp/tmux-{{ tmux_version }}"
+        state: absent
 
 - name: tmux // Clone Config
   ansible.builtin.git:
@@ -43,3 +116,4 @@
     unit: tmux
     enabled: true
     scope: user
+
