--- a/roles/default/tasks/subtasks/thefuck.yml
+++ b/roles/default/tasks/subtasks/thefuck.yml
@@ -13,7 +13,6 @@
   tags: [never, privileged]
   ansible.builtin.package:
     name:
-      - pipx
       - python3-dev 
       - python3-pip
       - python3-setuptools
@@ -21,10 +20,18 @@
   when: ansible_distribution in ["Debian", "Ubuntu"]
 
 - name: thefuck // Install
+  ansible.builtin.pip:
+    name: thefuck
+    extra_args: --user
+  when: ansible_distribution in ["Debian", "Ubuntu"]
+
+- name: thefuck // Install
   community.general.pipx:
     name: thefuck
+  when: ansible_distribution == "Archlinux"
 
 - name: thefuck // Add bash config
   ansible.builtin.copy:
     src: bash/thefuck.bash
     dest: "{{ ansible_env.HOME }}/.config/bash/thefuck.bash"
+
