--- a/roles/default/files/systemd/tmux.service
+++ b/roles/default/files/systemd/tmux.service
@@ -8,7 +8,7 @@ Type=forking
 ExecStart=bash -l -c "tmux new-session -d -s restore '~/.config/tmux/plugins/tmux-resurrect/scripts/restore.sh'"
 
 ExecStop=bash -l -c "~/.config/tmux/plugins/tmux-resurrect/scripts/save.sh"
-ExecStop=bash -c "sed -i 's#/tmp.*nvim#nvim#' ~/.config/tmux/plugins/tmux-resurrect/snapshots/last"
+ExecStop=bash -c "sed -i 's,/tmp.*nvim,nvim,' ~/.local/share/tmux/resurrect/last"
 ExecStop=bash -l -c "tmux kill-server"
 KillMode=control-group
 
