Install neovim from tarball on x86 machines

--- a/roles/default/tasks/main.yml
+++ b/roles/default/tasks/main.yml
@@ -4,7 +4,7 @@
   - import_tasks: subtasks/lazygit.yml
   - import_tasks: subtasks/nerdfont.yml
   - import_tasks: subtasks/nodejs.yml
-  - import_tasks: subtasks/nvim.yml
+  - import_tasks: subtasks/nvim/main.yml
   - import_tasks: subtasks/starship.yml
   - import_tasks: subtasks/thefuck.yml
   - import_tasks: subtasks/tmux.yml
