--- a/roles/default/tasks/main.yml
+++ b/roles/default/tasks/main.yml
@@ -7,6 +7,6 @@
   - import_tasks: subtasks/nvim/main.yml
   - import_tasks: subtasks/starship.yml
   - import_tasks: subtasks/thefuck.yml
-  - import_tasks: subtasks/tmux.yml
+  - import_tasks: subtasks/tmux/main.yml
   - import_tasks: subtasks/z.yml
 
