Link bash_profile to profile as well

--- a/roles/default/tasks/subtasks/bash.yml
+++ b/roles/default/tasks/subtasks/bash.yml
@@ -11,7 +11,14 @@
     state: link
     force: true
 
-- name: bashrc // Create bash_profile symlink
+- name: bashrc // Create .profile symlink
+  ansible.builtin.file:
+    src:  "{{ ansible_env.HOME }}/.config/bash/.bash_profile"
+    dest: "{{ ansible_env.HOME }}/.profile"
+    state: link
+    force: true
+
+- name: bashrc // Create .bash_profile symlink
   ansible.builtin.file:
     src:  "{{ ansible_env.HOME }}/.config/bash/.bash_profile"
     dest: "{{ ansible_env.HOME }}/.bash_profile"
