Auto restart deployment docker

--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   deployment-script:
     image: deployment-script
     build: .
+    restart: unless-stopped
     ports:
       - "1337:80"
 
