--- a/roles/default/tasks/subtasks/lazygit.yml
+++ b/roles/default/tasks/subtasks/lazygit.yml
@@ -3,25 +3,36 @@
     path: "{{ ansible_env.HOME }}/.local/bin"
     state: directory
 
+- name: lazygit // Get latest release data
+  ansible.builtin.uri:
+    url: https://api.github.com/repos/jesseduffield/lazygit/releases/latest
+  register: lazygit_latest_release
+
+- name: lazygit // Set latest version
+  set_fact:
+    lazygit_latest_release_version: "{{ lazygit_latest_release.json.tag_name | regex_replace('^v', '') }}"
+
 - name: lazygit // Check installed version
-  command: lazygit --version | grep -o ', version=[^,]*' | awk -F= '{print $2}'
+  ansible.builtin.shell: lazygit --version | grep -o ', version=[^,]*' | awk -F= '{print $2}'
+  args:
+    executable: /bin/bash
   ignore_errors: true
   changed_when: false
   failed_when: false
   register: lazygit_installed_version
 
-- when: lazygit_installed_version.rc != 0 or lazygit_installed_version.stdout is version(lazygit_version, "!=")
+- when: lazygit_installed_version.rc != 0 or lazygit_installed_version.stdout is version(lazygit_latest_release_version, "!=")
   block:
     - name: lazygit // Install
       ansible.builtin.unarchive:
-        src: "https://github.com/jesseduffield/lazygit/releases/download/v{{ lazygit_version }}/lazygit_{{ lazygit_version }}_Linux_x86_64.tar.gz"
+        src: "https://github.com/jesseduffield/lazygit/releases/download/v{{ lazygit_latest_release_version }}/lazygit_{{ lazygit_latest_release_version }}_Linux_x86_64.tar.gz"
         dest: "{{ ansible_env.HOME }}/.local/bin/"
         remote_src: yes
       when: ansible_architecture == "x86_64"
 
     - name: lazygit // Install
       ansible.builtin.unarchive:
-        src: "https://github.com/jesseduffield/lazygit/releases/download/v{{ lazygit_version }}/lazygit_{{ lazygit_version }}_Linux_arm64.tar.gz"
+        src: "https://github.com/jesseduffield/lazygit/releases/download/v{{ lazygit_latest_release_version }}/lazygit_{{ lazygit_latest_release_version }}_Linux_arm64.tar.gz"
         dest: "{{ ansible_env.HOME }}/.local/bin/"
         remote_src: yes
       when: ansible_architecture == "aarch64"
