--- a/roles/display/tasks/main.yml
+++ b/roles/display/tasks/main.yml
@@ -1,5 +1,5 @@
 - block:
   - import_tasks: subtasks/gnome.yml
   - import_tasks: subtasks/keyboard.yml
-  - import_tasks: subtasks/terminator.yml
+  - import_tasks: subtasks/kitty.yml
 
