--- a/roles/default/tasks/subtasks/nvim/from_tarball.yml
+++ b/roles/default/tasks/subtasks/nvim/from_tarball.yml
@@ -1,6 +1,6 @@
 - name: Neovim // Download and install tarball
   ansible.builtin.unarchive:
-    src: "https://github.com/neovim/neovim/releases/download/{{ nvim_version }}/nvim-linux64.tar.gz"
+    src: "https://github.com/neovim/neovim/releases/download/{{ nvim_version }}/nvim-linux-x86_64.tar.gz"
     dest: "{{ ansible_env.HOME }}/.local/"
     remote_src: yes
     extra_opts: ['--strip-components=1']
