Make sure python3-venv is installed for clang-format

--- a/roles/default/tasks/subtasks/nvim/main.yml
+++ b/roles/default/tasks/subtasks/nvim/main.yml
@@ -4,6 +4,7 @@
   ansible.builtin.package:
     name:
       - ripgrep # For telescope live grep
+      - python3-venv # clang-format dependency
     state: present
 
 - name: nvim // Check installed version
