--- a/roles/default/tasks/subtasks/lazygit.yml
+++ b/roles/default/tasks/subtasks/lazygit.yml
@@ -28,8 +28,7 @@
   register: lazygit_installed_version
 
 - when:
-    - lazygit_installed.rc != 0
-    - lazygit_installed_version.stdout is version(lazygit_latest_release_version, "!=")
+    - lazygit_installed.rc != 0 or lazygit_installed_version.stdout is version(lazygit_latest_release_version, "!=")
   block:
     - name: lazygit // Install
       ansible.builtin.unarchive:
