--- a/roles/default/tasks/main.yml
+++ b/roles/default/tasks/main.yml
@@ -2,6 +2,7 @@
   - import_tasks: subtasks/bash.yml
   - import_tasks: subtasks/fzf.yml
   - import_tasks: subtasks/lazygit.yml
+  - import_tasks: subtasks/locale.yml
   - import_tasks: subtasks/nerdfont.yml
   - import_tasks: subtasks/nodejs.yml
   - import_tasks: subtasks/nvim/main.yml
