--- a/roles/default/tasks/subtasks/thefuck.yml
+++ b/roles/default/tasks/subtasks/thefuck.yml
@@ -19,16 +19,15 @@
     state: present
   when: ansible_distribution in ["Debian", "Ubuntu"]
 
-- name: thefuck // Install
+- name: thefuck // Install pipx
   ansible.builtin.pip:
-    name: thefuck
+    name: pipx
     extra_args: --user
   when: ansible_distribution in ["Debian", "Ubuntu"]
 
 - name: thefuck // Install
   community.general.pipx:
     name: thefuck
-  when: ansible_distribution == "Archlinux"
 
 - name: thefuck // Add bash config
   ansible.builtin.copy:
