--- a/roles/display/tasks/subtasks/gnome.yml
+++ b/roles/display/tasks/subtasks/gnome.yml
@@ -1,3 +1,11 @@
+- name: Gnome // Install psutil
+  become: true
+  tags: [never, privileged]
+  ansible.builtin.package:
+    name:
+      - python3-psutil
+    state: present
+
 - name: Gnome // Ensure Icon Directory
   ansible.builtin.file:
     path: "{{ ansible_env.HOME }}/.icons"
