--- a/roles/default/tasks/subtasks/thefuck.yml
+++ b/roles/default/tasks/subtasks/thefuck.yml
@@ -1,6 +1,7 @@
 - name: thefuck // Install
   community.general.pipx:
     name: thefuck
+    executable: "{{ ansible_env.HOME }}/.local/venvs/pipx/bin/pipx"
 
 - name: thefuck // Add bash config
   ansible.builtin.copy:
