--- a/roles/mrt/tasks/main.yml
+++ b/roles/mrt/tasks/main.yml
@@ -3,13 +3,22 @@
     src: bash/mrt.bash
     dest: "{{ ansible_env.HOME }}/.config/bash/mrt.bash"
 
-- name: MRT // Clone rossrc
-  ansible.builtin.git:
-    repo: "https://github.com/ll-nick/rossrc.git"
-    dest: "{{ ansible_env.HOME }}/.rossrc"
-    force: "true"
+- name: MRT // Check if mrt tools are installed
+  ansible.builtin.stat:
+    path: /opt/mrtsoftware
+  register: mrtsoftware_dir
 
-- name: MRT // Source rossrc
-  ansible.builtin.copy:
-    src: bash/rossrc.bash
-    dest: "{{ ansible_env.HOME }}/.config/bash/rossrc.bash"
+- name: MRT // ROS configuration
+  when: mrtsoftware_dir.stat.exists
+  block:
+    - name: MRT // Clone rossrc
+      ansible.builtin.git:
+        repo: "https://github.com/ll-nick/rossrc.git"
+        dest: "{{ ansible_env.HOME }}/.rossrc"
+        force: "true"
+
+    - name: MRT // Add mrtros bash config
+      when: mrtsoftware_dir.stat.exists
+      ansible.builtin.copy:
+        src: bash/mrtros.bash
+        dest: "{{ ansible_env.HOME }}/.config/bash/mrtros.bash"
