--- a/roles/display/tasks/main.yml
+++ b/roles/display/tasks/main.yml
@@ -2,4 +2,5 @@
   - import_tasks: subtasks/gnome.yml
   - import_tasks: subtasks/keyboard.yml
   - import_tasks: subtasks/kitty.yml
+  - import_tasks: subtasks/xdg-directories.yml
 
