--- a/roles/display/tasks/subtasks/gnome.yml
+++ b/roles/display/tasks/subtasks/gnome.yml
@@ -27,14 +27,20 @@
     key: "/org/gnome/desktop/interface/cursor-theme"
     value: "'catppuccin-mocha-blue-cursors'"
 
+- name: Gnome // Ensure Picture Directory
+  ansible.builtin.file:
+    path: "{{ ansible_env.HOME }}/misc/xdg-directories/pictures"
+    state: directory
+    mode: '0755'
+
 - name: Gnome // Download Wallpaper
   ansible.builtin.get_url:
     url: "https://github.com/zhichaoh/catppuccin-wallpapers/blob/main/landscapes/shaded_landscape.png?raw=true"
-    dest: "{{ lookup('env', 'XDG_PICTURES_DIR') }}/wallpaper.png"
+    dest: "{{ ansible_env.HOME }}/misc/xdg-directories/pictures/wallpaper.png"
     checksum: sha256:1199a43751f1234d3fb92ecf614fbf34de2c07334d3fdd355891044f51bddada
 
 - name: Gnome // Set Wallpaper
   community.general.dconf:
     key: "/org/gnome/desktop/background/picture-uri"
-    value: "'file:///{{ lookup('env', 'XDG_PICTURES_DIR') }}/wallpaper.png'"
+    value: "'file:///{{ ansible_env.HOME }}/misc/xdg-directories/pictures/wallpaper.png'"
 
